ingress/ingress-prod-medical-devices.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: medical-devices-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/app-root: /en/landing/medical-devices
spec:
  tls:
  - hosts:
    - medical-devices.alpha.experimentation.ca
    secretName: medical-devices-tls-secret-prod
  rules:
  - host: medical-devices.alpha.experimentation.ca
    http:
      paths:
      - backend:
          serviceName: drupal-nginx
          servicePort: 80
        path: /
